# cuvis-ai-augment

./: .gitignore  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/pipelines/: demo_augment.yaml
cuvis_ai_augment/: __init__.py
cuvis_ai_augment/node/: __init__.py  compose.py
cuvis_ai_augment/transforms/: __init__.py  base.py  spatial.py
docs/: main-repo-manifest-snippet.yaml
examples/: plugins.yaml
tests/: conftest.py  test_base.py  test_compose.py  test_node_contracts.py  test_package_exports.py  test_plugin_manifest_loading.py  test_transforms_spatial.py
tests/fixtures/: fake_transform.py
